--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -14,7 +14,7 @@ $break-small: 767px;
     }
     .navbar-brand {
       img {
-        width: 150px;
+        width: 100px;
         height: auto;
       }
       @media screen and (max-width: $break-small) {
@@ -27,9 +27,15 @@ $break-small: 767px;
   #ns_navbar {
     a {
       color: #dedede;
+      text-transform: uppercase;
       &:hover {
         color: white;
       }
+    }
+  }
+  #ns_header {
+    .navbar {
+      border-radius: 0;
     }
   }
   //SLIDER
