--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -3,6 +3,7 @@ $break-small: 767px;
 #ns_body {
   max-width: 1180px;
   margin: 0 auto;
+  padding-top: 80px;
   a {
     text-decoration: none;
     color: inherit;
@@ -36,6 +37,11 @@ $break-small: 767px;
   #ns_header {
     .navbar {
       border-radius: 0;
+      max-width: 1200px;
+      margin-right: auto;
+      margin-left: auto;
+      padding-left: 15px;
+      padding-right: 15px;
     }
   }
   //SLIDER
