--- a/assets/styles/_custom.scss
+++ b/assets/styles/_custom.scss
@@ -245,7 +245,9 @@ $break-small: 767px;
 				}
 			}
 			&.cta-center {
-				h2 {text-align:center;}
+				h2 {text-align:center;
+				font-size: 20px;
+				font-weight: bold;}
 				p {
 					text-align: center;
 					font-size: 15px;
@@ -257,6 +259,8 @@ $break-small: 767px;
 				h2 {
 					display: inline-block;
 					text-transform: uppercase;
+					font-size: 20px;
+				font-weight: bold;
 				}
 				img {
 					width: 50%;
