--- a/assets/styles/_custom.scss
+++ b/assets/styles/_custom.scss
@@ -168,12 +168,19 @@ $break-small: 767px;
 				position: relative;
 				z-index: 2;
 				ol {
+					bottom: 20px;
+					list-style: none;
+					position: relative;
+					text-align: center;
 					li {
 						background: #dcdcdc;
 						border: 1px solid #b5b5b5;
 						border-radius: 50%;
+						display: inline-block;
 						height: 12px;
 						width: 12px;
+						font-size: 0;
+						margin: 0 5px;
 						&.unslider-active {
 							background: white;
 						}
@@ -369,4 +376,68 @@ $break-small: 767px;
 		padding: 0;
 	list-style: none;
 	}
+}
+
+.bubbles-modal {
+	.unslider {
+			margin: 0 auto;
+			overflow: hidden;
+			width: 90%;
+			.ns_slider, .modal_slider {
+				li {
+					background: #363636;
+				}
+				img {
+					display: inherit;
+					// height: 80%;
+					margin: 0 auto;
+					text-align: center;
+					width: 100%;
+				}
+			}
+			.unslider-nav {
+				margin-top: -20px;
+				position: relative;
+				z-index: 2;
+				ol {
+					bottom: 20px;
+					list-style: none;
+					position: relative;
+					text-align: center;
+					li {
+						background: #dcdcdc;
+						border: 1px solid #b5b5b5;
+						border-radius: 50%;
+						display: inline-block;
+						height: 12px;
+						width: 12px;
+						font-size: 0;
+						margin: 0 5px;
+						&.unslider-active {
+							background: white;
+						}
+					}
+				}
+			}
+			.unslider-arrow {
+				top: 50%;
+				width: 32px;
+				height: 32px;
+				right: 30px;
+				left: auto;
+				overflow: hidden;
+				background: rgba(0, 0, 0, 0.2) no-repeat 50% 50%;
+				background-image: url('../img/slider-arrow-right.png');
+				border-radius: 32px;
+				text-indent: -999em;
+				@media screen and (min-width: 1200px){
+					top:50%;
+				}
+				&.prev {
+					left: 30px;
+					right: auto;
+					transform: rotate(-180deg);
+				}
+			}
+		}
 }
