--- a/assets/styles/_custom.scss
+++ b/assets/styles/_custom.scss
@@ -6,6 +6,9 @@ $break-small: 767px;
 	box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.09);
 }
 #ns_body {
+	.navbar-right {
+		margin-right: 0px;
+	}
 	font-family: $nokiafont-light;
 	min-height: 100vh;
 	margin: 0 auto;
