--- a/assets/styles/_custom.scss
+++ b/assets/styles/_custom.scss
@@ -123,6 +123,7 @@ $break-small: 767px;
 	    max-height: 60vh;
 	    margin-bottom: 20px;
 	    line-height: 18px;
+	    overflow-y: scroll;
 	    padding: 20px;
 	    right: 0;
 	    z-index: 10;
@@ -130,6 +131,17 @@ $break-small: 767px;
 				font-size: 13px;
 				height: auto;
 				margin-bottom: 10px;
+			}
+			&::-webkit-scrollbar {
+				background: #797979;
+				width: 1em;
+			}
+			&::-webkit-scrollbar-track {
+				-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+			}
+			&::-webkit-scrollbar-thumb {
+				background-color: #2c2c2c;
+  			outline: 1px solid slategrey;
 			}
 		 }
 		&#section {
@@ -222,6 +234,11 @@ $break-small: 767px;
 			margin-bottom: 30px;
 		}
 		.ns_tile_element {
+			&.hr-br {
+				@media screen and (min-width:1200px) {
+					height: 49.5vw;
+				}
+			}
 			border: 1px solid #e6e6e6;
 			margin-bottom: 10px;
 			overflow: hidden;
